# cid-ntrl

./: .gitignore  FileScan-page.qml  README.md  ai.py  copy.txt  main.py  main.qml  requirements.txt
av-lib/: Cargo.toml  pyproject.toml
av-lib/src/: lib.rs
av_ai/: ntrl_av_ai.py
misc/: win_debloat.ps1
sys_h/linux/krnl_mgmt/: krnl_mgmt_chk.py  krnl_mgmt_x.py
sys_h/linux/misc/: misc.py
sys_h/linux/ntwrk_mgmt/: ntwrk_mgmt_chk.py  ntwrk_mgmt_x.py
sys_h/linux/usr_mgmt/: usr_mgmt_chk.py  usr_mgmt_x.py
sys_h/windows/krnl_mgmt/: krnl_mgmt_chk.py  krnl_mgmt_x.py
sys_h/windows/misc/: misc.py
sys_h/windows/ntwrk_mgmt/: ntwrk_mgmt_chk.py  ntwrk_mgmt_x.py
sys_h/windows/usr_mgmt/: usr_mgmt_chk.py  usr_mgmt_x.py
