[package]
name = "av-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "av_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
clamav-client = "0.5.1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"
